--- a/ordenes/templates/ordenes/vista_equipos_parcial.html
+++ b/ordenes/templates/ordenes/vista_equipos_parcial.html
@@ -30,7 +30,7 @@
     {% for orden in ordenes %}
     <tr>
       <td>{{ orden.id }}</td>
-      <td>{{ orden.fecha_ingreso|date:"d/m/Y H:i" }}</td>
+      <td>{{ orden.fecha_ingreso|date:"d/m/Y" }}</td>
       <td>{{ orden.equipo.marca }}</td>
       <td>{{ orden.equipo.modelo }}</td>
       <td>{{ orden.cliente.nombre }}</td>
