AGREGADO DE FUNCIONES EN LISTA DE CLIENTES

--- a/ordenes/templates/base.html
+++ b/ordenes/templates/base.html
@@ -36,10 +36,11 @@
   </footer>
 
   <!-- Scripts al final del body -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="{% static 'js/clientes.js' %}"></script>
+  <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
   <script src="{% static 'js/ventanas.js' %}"></script>
-
+  <script src="{% static 'js/clientes.js' %}"></script>
+  
   
 </body>
 </html>
